# laborsynth

./: CMakeLists.txt  Cargo.toml  cadder  lib.c  lib.h  main.c  stack.yaml
.cache/clangd/index/: lib.c.E2EA6902EB720484.idx  lib.h.68B541A0D30EA209.idx
src/: main.rs
